# ativos-poc

./: .gitignore  pyproject.toml
project/: asgi.py  settings.py  urls.py  wsgi.py
project/carbon/: apps.py  models.py
project/carbon/migrations/: 0001_initial.py  0002_alter_modelo_carbon_manufactor.py
project/cdata/: apps.py  models.py
project/cdata/migrations/: 0001_initial.py  0002_alter_ativos_avg_fuel_consumption_and_more.py  0003_ativos_name_org_name_alter_ativos_unique_together.py  0004_remove_ativos_working_speed.py
tests/: test_create_ativos.py
