[project]
name = "ativos-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Andre Hermann",email = "andre.hermann@carbonbr.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-django (>=4.10.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --ds=project.settings --no-migrations"
testpaths = [
#    "tests", "project",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

